src/test/ui/error-codes/E0657.stderr
error[E0657]: `impl Trait` can only capture lifetimes bound at the fn or impl level
  --> $DIR/E0657.rs:19:31: in fn free_fn_capture_hrtb_in_impl_trait
   |
LL |     -> Box<for<'a> Id<impl Lt<'a>>>
   |                               ^^

error[E0657]: `impl Trait` can only capture lifetimes bound at the fn or impl level
  --> $DIR/E0657.rs:28:35: in fn impl_fn_capture_hrtb_in_impl_trait::impl_fn_capture_hrtb_in_impl_trait
   |
LL |         -> Box<for<'a> Id<impl Lt<'a>>>
   |                                   ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0657`.
